# Chatbot-AI

./: .gitattributes  .gitignore  00_IMPLEMENTATION_COMPLETE.md  ARCHITECTURE.md  CHAT_HISTORY_DESIGN.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_EXAMPLE.md  PROJECT_STRUCTURE.md  README.md  app.py  baocao_hethong_chatbot.md  credentials.json  customer_followup_service.py  database.db  function_call.py  ggsheet_service.py  main.py  ngrok.yml  overview_config.py  pyproject.toml  run.bat  session_manager.py  setup.txt  start-ngrok.bat
old_backup/: app.py  function_call.py  ggsheet_service.py  overview_config.py  session_manager.py
scripts/: embed_data.py  fix_chat_history_schema.sql  init_db.sql  migration_chat_history.sql  seed_branches.py  seed_overviews.py  sync_pages.py
src/api/: routes.py
src/config/: overview_config.py  prompts.py  settings.py
src/core/: app.py
src/db/: database.py  db_postgres.py  models.py  operations.py  session_manager.py
src/services/: function_call.py  ggsheet_service.py  location_memory.py  search_address.py
src/utils/: embeddings.py  helpers.py
