[project]
name = "thuc-tap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.7",
    "ipython>=9.12.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.6",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.22",
    "pgvector>=0.3.6",
    "psycopg2-binary>=2.9.10",
    "google-generativeai>=0.8.3",
]
